[package]
name = "coco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cel-interpreter = "0.8.1"
chrono = "0.4.38"
clap = "4.5.20"
console = "0.15.8"
md5 = "0.7.0"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9.34"
