[package]
name = "coco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cel-interpreter = "0.9.0"
chrono = "0.4.38"
clap = "4.5.20"
console = "0.15.8"
md5 = "0.7.0"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json"] }
table = "0.1.1"
indicatif = "0.17.8"
term_size = "0.3.2"
colored = "2.1.0"
base64 = "0.21.7"
prettytable = "0.10.0"
